--- a/src/java/properties/imageFolder.properties
+++ b/src/java/properties/imageFolder.properties
@@ -1,4 +1,5 @@
 #for Windows
-path=D:\\JVM\\JKTVR18WebLibraryImages
+cover=D:\\JVM\\JKTVR18WebLibrary\\Images
+file="D:\\JVM\\JKTVR18WebLibrary\\Books
 #for Linux
 #path=//opt//Images//JKTVR18WebLibraryImages
