Реализация функции скачивания купленных книг

--- a/src/java/properties/imageFolder.properties
+++ b/src/java/properties/imageFolder.properties
@@ -1,5 +1,5 @@
 #for Windows
 cover=D:\\JVM\\JKTVR18WebLibrary\\Images
-file="D:\\JVM\\JKTVR18WebLibrary\\Books
+file=D:\\JVM\\JKTVR18WebLibrary\\Books
 #for Linux
 #path=//opt//Images//JKTVR18WebLibraryImages
