--- a/src/java/properties/imageFolder.properties
+++ b/src/java/properties/imageFolder.properties
@@ -1,19 +1,12 @@
 #for Windows
-<<<<<<< HEAD
 cover=D:\\JVM\\JKTVR18WebLibrary\\Images
 file=D:\\JVM\\JKTVR18WebLibrary\\Books
 tmp=C:\\temp
 #for Linux
-#path=/opt/JKTVR18WebLibrary/Images
+#cover=/opt/JKTVR18WebLibrary/Images
 #path=/opt/JKTVR18WebLibrary/Books
 #tmp=/tmp
 #for Mac
-#path=~/JKTVR18WebLibrary/Images
-#path=~/JKTVR18WebLibrary/Books
-#tmp=~/tmp
-=======
-cover=E:\\JVM\\JKTVR18WebLibrary\\Images
-file=E:\\JVM\\JKTVR18WebLibrary\\Books
-#for Linux
-#path=//opt//Images//JKTVR18WebLibraryImages
->>>>>>> f1f53c4816770c3609747e230b223e8e6f69460b
+#cover=~/JKTVR18WebLibrary/Images
+#file=~/JKTVR18WebLibrary/Books
+#tmp=/tmp
