--- a/src/java/properties/imageFolder.properties
+++ b/src/java/properties/imageFolder.properties
@@ -1,12 +1,12 @@
 #for Windows
-cover=D:\\JVM\\JKTVR18WebLibrary\\Images
-file=D:\\JVM\\JKTVR18WebLibrary\\Books
-tmp=C:\\temp
+#cover=D:\\JVM\\JKTVR18WebLibrary\\Images
+#file=D:\\JVM\\JKTVR18WebLibrary\\Books
+#tmp=C:\\temp
 #for Linux
 #cover=/opt/JKTVR18WebLibrary/Images
 #path=/opt/JKTVR18WebLibrary/Books
 #tmp=/tmp
 #for Mac
-#cover=~/JKTVR18WebLibrary/Images
-#file=~/JKTVR18WebLibrary/Books
-#tmp=/tmp
+cover=~/JKTVR18WebLibrary/Images
+file=~/JKTVR18WebLibrary/Books
+tmp=/tmp
