--- a/src/java/properties/imageFolder.properties
+++ b/src/java/properties/imageFolder.properties
@@ -3,10 +3,10 @@
 #file=D:\\JVM\\JKTVR18WebLibrary\\Books
 #tmp=C:\\temp
 #for Linux
-#cover=/opt/JKTVR18WebLibrary/Images
-#path=/opt/JKTVR18WebLibrary/Books
-#tmp=/tmp
-#for Mac
-cover=~/JKTVR18WebLibrary/Images
-file=~/JKTVR18WebLibrary/Books
+cover=/opt/JKTVR18WebLibrary/Images
+path=/opt/JKTVR18WebLibrary/Books
 tmp=/tmp
+#for Mac
+#cover=~/JKTVR18WebLibrary/Images
+#file=~/JKTVR18WebLibrary/Books
+#tmp=/tmp
